<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_internet_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true"
    android:elevation="20dp"
    android:visibility="gone"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_no_internet"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/img_no_internet" />

        <TextView
            android:id="@+id/tv_no_internet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:textStyle="bold"
            android:text="@string/title_no_internet"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_no_internet_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/msg_no_internet"
            android:textColor="#B3FFFFFF"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry_internet"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nunito_sans"
            android:textStyle="bold"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/btn_retry"
            android:textColor="@color/black"
            app:backgroundTint="@color/primary_green"
            app:cornerRadius="12dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
